# picolibc

./: README.md  meson.build  meson_options.txt
fromager/: gen_mirror_header.py  link_staticlib_bitcode.sh  meson.build
newlib/libc/: meson.build
newlib/libc/argz/: meson.build
newlib/libc/ctype/: meson.build
newlib/libc/errno/: meson.build
newlib/libc/iconv/ccs/: meson.build
newlib/libc/iconv/ces/: meson.build
newlib/libc/iconv/lib/: meson.build
newlib/libc/include/: meson.build  netdb.h  noni.h  poll.h  syslog.h  termio.h
newlib/libc/include/arpa/: inet.h  meson.build
newlib/libc/include/bits/: fcntl.in  meson.build  mman.in  netinet_in.in  socket.in  sys_un.in
newlib/libc/include/netinet/: in.h  meson.build
newlib/libc/include/sys/: _default_fcntl.h  dirent.h  ioctl.h  meson.build  mman.h  socket.h  un.h
newlib/libc/locale/: meson.build
newlib/libc/machine/aarch64/: meson.build
newlib/libc/machine/arm/: meson.build
newlib/libc/machine/csky/: meson.build
newlib/libc/machine/fromager/: cc_interface.h  cc_native.c  cc_native.h  fromager.h  llvm_intrin.c  llvm_intrin2.ll  malloc-calloc.c  malloc-cfree.c  malloc-free.c  malloc-mallinfo.c  malloc-malloc.c  malloc-malloc_stats.c  malloc-malloc_usable_size.c  malloc-mallopt.c  malloc-memalign.c  malloc-pvalloc.c  malloc-realloc.c  malloc-valloc.c  mallocr.c  meson.build  misc.c  nanocxx.cpp  stack_protector.c  syscalls.c  syscalls_common.c  syscalls_native.c
newlib/libc/machine/fromager/microram/: syscalls.c
newlib/libc/machine/fromager/native/: syscalls.c
newlib/libc/machine/i386/: meson.build
newlib/libc/machine/powerpc/: meson.build
newlib/libc/machine/riscv/: meson.build
newlib/libc/machine/x86_64/: meson.build
newlib/libc/machine/xtensa/: meson.build
newlib/libc/misc/: meson.build
newlib/libc/picolib/: getauxval.c  meson.build
newlib/libc/posix/: meson.build
newlib/libc/reent/: meson.build
newlib/libc/search/: meson.build
newlib/libc/signal/: meson.build
newlib/libc/ssp/: meson.build
newlib/libc/stdio/: meson.build
newlib/libc/stdio64/: meson.build
newlib/libc/stdlib/: meson.build
newlib/libc/string/: meson.build
newlib/libc/time/: meson.build
newlib/libc/tinystdio/: meson.build
newlib/libc/xdr/: meson.build
newlib/libm/common/: meson.build
newlib/libm/complex/: meson.build
newlib/libm/fenv/: meson.build
newlib/libm/machine/fromager/: meson.build
newlib/libm/math/: meson.build
newlib/libm/test/: meson.build
newlib/testsuite/newlib.locale/: meson.build
scripts/: cross-x86_64-unknown-fromager.txt  do-fromager-configure  fromager-link.sh
